Rename some files

--- a/PrimeGridLayout/PrimeGridViewController.xib
+++ b/PrimeGridLayout/PrimeGridViewController.xib
@@ -28,7 +28,7 @@
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pxL-9d-AfC">
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jLz-Pd-3J5" customClass="PrimeGridLayout" customModule="PrimeGridLayout" customModuleProvider="target">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jLz-Pd-3J5" customClass="GridLayout" customModule="PrimeGridLayout" customModuleProvider="target">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
